Fixed wrapping for sure this time.

--- a/starter/client/src/styles/profile-styles/userProfile.css
+++ b/starter/client/src/styles/profile-styles/userProfile.css
@@ -65,7 +65,7 @@ img {
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 1px;
 		color: rgb(109, 108, 108);
-		word-break:break-all;
+		word-break: break-word;
 		white-space: pre-wrap;
 }
 
@@ -95,6 +95,7 @@ img {
     flex-direction: column;
     height: auto;
 		align-self: flex-end;
+
 }
 
 h2.pro-head__username,
@@ -147,8 +148,7 @@ h3.pro-body__head{
 }
 
 p.pro-body__cont{
-    color: #707070;
-
+		color: #707070;
 }
 
 p.pro-body__alt-cont {
